--- a/index.html
+++ b/index.html
@@ -91,23 +91,20 @@
                 <div class="banner_post_1 banner_post_bg_1">
                     <div class="banner_post_iner text-center">
                         <a href="category.html"><h5> Fashion / Life style</h5></a> 
-                        <a href="single-blog.html"><h2>All said replenish years void
-                            kind say void </h2></a> 
+                        <a href="single-blog.html"><h2>Tình yêu tuổi 18</h2></a> 
                         <p>Posted on April 15, 2019</p>
                     </div>
                 </div><div class="banner_post_1 banner_post_bg_2">
                     <div class="banner_post_iner text-center">
                         <a href="category.html"><h5> Fashion / Life style</h5></a> 
-                        <a href="single-blog.html"><h2>All said replenish years void
-                            kind say void </h2></a> 
+                        <a href="single-blog.html"><h2>Cô nàng nhí nhảnh</h2></a> 
                         <p>Posted on April 15, 2019</p>
                     </div>
                 </div>
                 <div class="banner_post_1 banner_post_bg_3">
                     <div class="banner_post_iner text-center">
                         <a href="category.html"><h5> Fashion / Life style</h5></a> 
-                        <a href="single-blog.html"><h2>All said replenish years void
-                            kind say void </h2></a> 
+                        <a href="single-blog.html"><h2>Không có ngôn từ để mô tả</h2></a> 
                         <p>Posted on April 15, 2019</p>
                     </div>
                 </div>
@@ -155,11 +152,11 @@
                         <div class="col-lg-12">
                             <div class="single_post post_1 feature_post">
                                 <div class="single_post_img">
-                                    <img src="img/post/post_12.png" alt="">
+                                    <img src="img/post/Huy03.jpg" alt="">
                                 </div>
                                 <div class="single_post_text text-center">
-                                    <a href="category.html"><h5> Fashion / Life style</h5></a> 
-                                    <a href="single-blog.html"><h2>All said replenish years void kind say void </h2></a> 
+                                    <a href="category.html"><h5> 5 anh em siêu nhân</h5></a> 
+                                    <a href="single-blog.html"><h2>Bức ảnh nói lên tất cả</h2></a> 
                                     <p>Posted on April 15, 2019</p>
                                 </div>
                             </div>
@@ -167,33 +164,7 @@
                         <div class="col-lg-6 col-sm-6">
                             <div class="single_post post_1">
                                 <div class="single_post_img">
-                                    <img src="img/post/post_18.png" alt="">
-                                </div>
-                                <div class="single_post_text text-center">
-                                    <a href="category.html"><h5> Fashion / Life style</h5></a> 
-                                    <a href="single-blog.html"><h2>Your life is a product your
-                                            right decisions</h2></a> 
-                                    <p>Posted on April 15, 2019</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-sm-6">
-                                <div class="single_post post_1">
-                                    <div class="single_post_img">
-                                        <img src="img/post/post_19.png" alt="">
-                                    </div>
-                                    <div class="single_post_text text-center">
-                                        <a href="category.html"><h5> Fashion / Life style</h5></a> 
-                                        <a href="single-blog.html"><h2>Your life is a product your
-                                                right decisions</h2></a> 
-                                        <p>Posted on April 15, 2019</p>
-                                    </div>
-                                </div>
-                        </div>
-                        <div class="col-lg-6 col-sm-6">
-                            <div class="single_post post_1">
-                                <div class="single_post_img">
-                                    <img src="img/post/post_20.png" alt="">
+                                    <img src="img/post/Huy02.jpg" alt="">
                                 </div>
                                 <div class="single_post_text text-center">
                                     <a href="category.html"><h5> Fashion / Life style</h5></a> 
@@ -206,7 +177,7 @@
                         <div class="col-lg-6 col-sm-6">
                                 <div class="single_post post_1">
                                     <div class="single_post_img">
-                                        <img src="img/post/post_21.png" alt="">
+                                        <img src="img/post/Huy01.png" alt="">
                                     </div>
                                     <div class="single_post_text text-center">
                                         <a href="category.html"><h5> Fashion / Life style</h5></a> 
@@ -219,7 +190,33 @@
                         <div class="col-lg-6 col-sm-6">
                             <div class="single_post post_1">
                                 <div class="single_post_img">
-                                    <img src="img/post/post_22.png" alt="">
+                                    <img src="img/post/Huy04.jpg" alt="">
+                                </div>
+                                <div class="single_post_text text-center">
+                                    <a href="category.html"><h5> Fashion / Life style</h5></a> 
+                                    <a href="single-blog.html"><h2>Your life is a product your
+                                            right decisions</h2></a> 
+                                    <p>Posted on April 15, 2019</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-sm-6">
+                                <div class="single_post post_1">
+                                    <div class="single_post_img">
+                                        <img src="img/post/Huy05.png" alt="">
+                                    </div>
+                                    <div class="single_post_text text-center">
+                                        <a href="category.html"><h5> Fashion / Life style</h5></a> 
+                                        <a href="single-blog.html"><h2>Your life is a product your
+                                                right decisions</h2></a> 
+                                        <p>Posted on April 15, 2019</p>
+                                    </div>
+                                </div>
+                        </div>
+                        <div class="col-lg-6 col-sm-6">
+                            <div class="single_post post_1">
+                                <div class="single_post_img">
+                                    <img src="img/post/Huy06.jpg" alt="">
                                 </div>
                                 <div class="single_post_text text-center">
                                     <a href="category.html"><h5> Fashion / Life style</h5></a> 
