--- a/treTrauXomChu.html
+++ b/treTrauXomChu.html
@@ -29,7 +29,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"> </a>
+                        <a class="navbar-brand" href="index.html"> <img src="img/treTrau/logo.png" alt="logo" > </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -91,20 +91,20 @@
                 <div class="banner_post_1 banner_post_bg_1">
                     <div class="banner_post_iner text-center">
                         <a href="category.html"><h5> Fashion / Life style</h5></a> 
-                        <a href="single-blog.html"><h2>Tình yêu tuổi 18</h2></a> 
+                        <a href="single-blog.html"><h2>Cô giáo chưa lấy chồng</h2></a> 
                         <p>Posted on April 15, 2019</p>
                     </div>
                 </div><div class="banner_post_1 banner_post_bg_2">
                     <div class="banner_post_iner text-center">
                         <a href="category.html"><h5> Fashion / Life style</h5></a> 
-                        <a href="single-blog.html"><h2>Cô nàng nhí nhảnh</h2></a> 
+                        <a href="single-blog.html"><h2>Người đàn ông thành lập nhóm</h2></a> 
                         <p>Posted on April 15, 2019</p>
                     </div>
                 </div>
                 <div class="banner_post_1 banner_post_bg_3">
                     <div class="banner_post_iner text-center">
                         <a href="category.html"><h5> Fashion / Life style</h5></a> 
-                        <a href="single-blog.html"><h2>Không có ngôn từ để mô tả</h2></a> 
+                        <a href="single-blog.html"><h2>Cô nàng nhí nhảnh</h2></a> 
                         <p>Posted on April 15, 2019</p>
                     </div>
                 </div>
@@ -152,10 +152,10 @@
                         <div class="col-lg-12">
                             <div class="single_post post_1 feature_post">
                                 <div class="single_post_img">
-                                    <img src="img/post/Huy03.jpg" alt="">
+                                    <img src="img/treTrau/full.jpg" alt="">
                                 </div>
                                 <div class="single_post_text text-center">
-                                    <a href="category.html"><h5> 5 anh em siêu nhân</h5></a> 
+                                    <a href="category.html"><h5> Bức ảnh đầy đủ thành viên</h5></a> 
                                     <a href="single-blog.html"><h2>Bức ảnh nói lên tất cả</h2></a> 
                                     <p>Posted on April 15, 2019</p>
                                 </div>
@@ -164,11 +164,11 @@
                         <div class="col-lg-6 col-sm-6">
                             <div class="single_post post_1">
                                 <div class="single_post_img">
-                                    <img src="img/post/Huy02.jpg" alt="">
+                                    <img src="img/treTrau/QuayTuan01.jpg" alt="">
                                 </div>
                                 <div class="single_post_text text-center">
                                     <a href="category.html"><h5> Fashion / Life style</h5></a> 
-                                    <a href="single-blog.html"><h2>Những giây phút đầu tiên bước chân đến Đà Nẵng</h2></a> 
+                                    <a href="single-blog.html"><h2>Cu Tuấn</h2></a> 
                                     <p>Posted on April 15, 2021</p>
                                 </div>
                             </div>
@@ -176,7 +176,7 @@
                         <div class="col-lg-6 col-sm-6">
                                 <div class="single_post post_1">
                                     <div class="single_post_img">
-                                        <img src="img/post/Huy01.png" alt="">
+                                        <img src="img/treTrau/tet01.jpg" alt="">
                                     </div>
                                     <div class="single_post_text text-center">
                                         <a href="category.html"><h5> Fashion / Life style</h5></a> 
@@ -188,10 +188,10 @@
                         <div class="col-lg-6 col-sm-6">
                             <div class="single_post post_1">
                                 <div class="single_post_img">
-                                    <img src="img/post/Huy04.jpg" alt="">
+                                    <img src="img/treTrau/be01.jpg" alt="">
                                 </div>
                                 <div class="single_post_text text-center">
-                                    <a href="category.html"><h5> Fashion / Life style</h5></a> 
+                                    <a href="https://www.facebook.com/be.ems.39"><h5> Fashion / Life style</h5></a> 
                                     <a href="single-blog.html"><h2>Your life is a product your
                                             right decisions</h2></a> 
                                     <p>Posted on April 15, 2019</p>
@@ -201,7 +201,7 @@
                         <div class="col-lg-6 col-sm-6">
                                 <div class="single_post post_1">
                                     <div class="single_post_img">
-                                        <img src="img/post/Huy05.png" alt="">
+                                        <img src="img/treTrau/dang01.jpg" alt="">
                                     </div>
                                     <div class="single_post_text text-center">
                                         <a href="category.html"><h5> Fashion / Life style</h5></a> 
@@ -213,7 +213,7 @@
                         <div class="col-lg-6 col-sm-6">
                             <div class="single_post post_1">
                                 <div class="single_post_img">
-                                    <img src="img/post/Huy06.jpg" alt="">
+                                    <img src="img/treTrau/ha01.jpg" alt="">
                                 </div>
                                 <div class="single_post_text text-center">
                                     <a href="category.html"><h5> Fashion / Life style</h5></a> 
@@ -226,7 +226,7 @@
                         <div class="col-lg-6 col-sm-6">
                                 <div class="single_post post_1">
                                     <div class="single_post_img">
-                                        <img src="img/post/post_23.png" alt="">
+                                        <img src="img/treTrau/Livan01.jpg" alt="">
                                     </div>
                                     <div class="single_post_text text-center">
                                         <a href="category.html"><h5> Fashion / Life style</h5></a> 
@@ -239,7 +239,7 @@
                         <div class="col-lg-6 col-sm-6">
                             <div class="single_post post_1">
                                 <div class="single_post_img">
-                                    <img src="img/post/post_24.png" alt="">
+                                    <img src="img/treTrau/lep01.jpg" alt="">
                                 </div>
                                 <div class="single_post_text text-center">
                                     <a href="category.html"><h5> Fashion / Life style</h5></a> 
@@ -252,7 +252,7 @@
                         <div class="col-lg-6 col-sm-6">
                                 <div class="single_post post_1">
                                     <div class="single_post_img">
-                                        <img src="img/post/post_25.png" alt="">
+                                        <img src="img/treTrau/MeoHong.jpg" alt="">
                                     </div>
                                     <div class="single_post_text text-center">
                                         <a href="category.html"><h5> Fashion / Life style</h5></a> 
@@ -262,6 +262,33 @@
                                     </div>
                                 </div>
                         </div>
+                        <div class="col-lg-6 col-sm-6">
+                            <div class="single_post post_1">
+                                <div class="single_post_img">
+                                    <img src="img/treTrau/QuanL01.jpg" alt="">
+                                </div>
+                                <div class="single_post_text text-center">
+                                    <a href="category.html"><h5> Fashion / Life style</h5></a> 
+                                    <a href="single-blog.html"><h2>Your life is a product your
+                                            right decisions</h2></a> 
+                                    <p>Posted on April 15, 2019</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-sm-6">
+                                <div class="single_post post_1">
+                                    <div class="single_post_img">
+                                        <img src="img/treTrau/tet02.jpg" alt="">
+                                    </div>
+                                    <div class="single_post_text text-center">
+                                        <a href="category.html"><h5> Fashion / Life style</h5></a> 
+                                        <a href="single-blog.html"><h2>Your life is a product your
+                                                right decisions</h2></a> 
+                                        <p>Posted on April 15, 2019</p>
+                                    </div>
+                                </div>
+                        </div>
+                        
                     </div>
                     <div class="page_pageniation">
                         <nav aria-label="Page navigation example">
@@ -376,7 +403,7 @@
                     <div class="social_connect">
                     <div class="single-social_connect">
                         <div class="social_connect_img">
-                            <img src="img/insta/instagram_1.png" class="" alt="blog">
+                            <img src="img/treTrau/diHT.jpg" class="" alt="blog">
                             <div class="social_connect_overlay">
                                 <a href="#"><span class="ti-instagram"></span></a> 
                             </div>
@@ -384,7 +411,7 @@
                     </div>
                     <div class="single-social_connect">
                         <div class="social_connect_img">
-                            <img src="img/insta/instagram_2.png" class="" alt="blog">
+                            <img src="img/treTrau/chuaDG.jpg" class="" alt="blog">
                             <div class="social_connect_overlay">
                                 <a href="#"><span class="ti-instagram"></span></a> 
                             </div>
