--- a/treTrauXomChu.html
+++ b/treTrauXomChu.html
@@ -29,7 +29,8 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img src="img/treTrau/logo.png" alt="logo" > </a>
+                        <!-- <a class="navbar-brand" href="index.html"> <img src="img/treTrau/logo.png" alt="logo" > </a> -->
+                        <a class="navbar-brand" href="treTrauXomChu.html"> <img src="img/treTrau/logo.png" alt="logo" > </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +41,8 @@
                             id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Home</a>
+                                    <!-- <a class="nav-link" href="index.html">Home</a> -->
+                                    <a class="nav-link" href="treTrauXomChu.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="archive.html">Archive</a>
@@ -188,7 +190,7 @@
                         <div class="col-lg-6 col-sm-6">
                             <div class="single_post post_1">
                                 <div class="single_post_img">
-                                    <img src="img/treTrau/be01.jpg" alt="">
+                                    <img src="img/treTrau/be02.jpg" alt="">
                                 </div>
                                 <div class="single_post_text text-center">
                                     <a href="https://www.facebook.com/be.ems.39"><h5> Fashion / Life style</h5></a> 
@@ -403,7 +405,8 @@
                     <div class="social_connect">
                     <div class="single-social_connect">
                         <div class="social_connect_img">
-                            <img src="img/treTrau/diHT.jpg" class="" alt="blog">
+                            <!-- <img src="img/treTrau/diHT.jpg" class="" alt="blog"> -->
+                            <img src="img/treTrau/diHT.jpg" class="img-thumbnail" alt="...">
                             <div class="social_connect_overlay">
                                 <a href="#"><span class="ti-instagram"></span></a> 
                             </div>
@@ -411,7 +414,10 @@
                     </div>
                     <div class="single-social_connect">
                         <div class="social_connect_img">
-                            <img src="img/treTrau/chuaDG.jpg" class="" alt="blog">
+                            <!-- <img src="img/treTrau/chuaDG.jpg" class="" alt="blog"> -->
+                            <!-- <img src="img/treTrau/chuaDG.jpg" class="rounded" alt="..."> -->
+                            <img src="img/treTrau/chuaDG.jpg" class="img-fluid" alt="...">
+
                             <div class="social_connect_overlay">
                                 <a href="#"><span class="ti-instagram"></span></a> 
                             </div>
