--- a/video.html
+++ b/video.html
@@ -119,7 +119,7 @@
           <div class="d-flex h-100 text-center align-items-center">
             <div class="w-100 text-white">
               <h1 class="display-3">Video short</h1>
-              <p class="lead mb-0">Xin cái caption</p>
+              <p class="lead mb-0">Thằng con Xi mi đang ăn cái chi đó</p>
             </div>
           </div>
         </div>
